--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
-body,
-html {
+body{
   margin: 0;
   /* height: 100vh; */
   width: 100vw;
+  background-color: black;
+  /* color: pink; */
 }
 
 #app {
@@ -55,6 +56,8 @@ html {
 
 #form-container {
   text-align: center;
+  max-width: 50%;
+  margin: 0 auto;
 }
 
 #editButton {
