--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ html {
   margin: 0;
   /* height: 100vh; */
   width: 100vw;
+  /* font-family: 'Open Sans', sans-serif; */
+  font-family: 'Volkhov', serif;
 }
 
 #app {
@@ -108,6 +110,7 @@ html {
   /* margin: 20px;
   width: 500px; */
   /* min-height: 200px; */
+  justify-items: end;
   display: grid;
   padding: 20px;
   grid-template-rows: repeat(7, 1fr);
@@ -116,12 +119,18 @@ html {
   transition: all 0.2s;
   max-width: 200px;
   margin: 0 auto;
+  max-height: 300px;
 }
 
 p,
 h3 {
   display: inline-block;
   text-align: center;
+  margin: 5px;
+}
+
+p {
+  max-width: 78%;
 }
 
 #archived-title {
@@ -187,7 +196,7 @@ h3 {
   grid-row: 3/4;
 }
 .card__company {
-  font-weight: 600;
+  font-weight: 800;
   color: #ffffff;
   text-align: center;
   font-size: 21px;
@@ -195,9 +204,54 @@ h3 {
 
 .card__title {
   font-weight: 400;
-  color: #ffffff;
+  color: #18191e;
   text-align: center;
-  font-size: 18px;
+  font-size: 16px;
+}
+
+.salaryText {
+  font-weight: 400;
+  color: #18191e;
+}
+
+.interviewText {
+  font-weight: 400;
+  color: #18191e;
+}
+
+.interview-container {
+  display: flex;
+  align-content: space-between;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  align-items: flex-end;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.location-container {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+}
+
+.interviewTextWrapper {
+  max-height: 92%;
+  overflow: scroll;
+  background-color: #f5f5f5a6;
+  border-radius: 10px;
+  border: 1px solid white;
+  display: inline-block;
+}
+
+.vibeCheckTextWrapper {
+  overflow: scroll;
+  width: 80%;
+}
+.vibeText {
+  font-weight: 400;
+  color: #18191e;
 }
 
 #editButton {
