changed put functionality

--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,24 @@ body{
   width: 100vw;
   background-color: black;
   /* color: pink; */
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-#app {
-  /* height: 100%; */
+#create-button {
+  font-size: 15px;
+  padding: 12px 24px;
+  border-radius: 12px;
+  color: black;
+  margin-left: 70px;
+  margin-bottom: 30px;
+}
+
+#add-card {
+  font-size: 20px;
+  padding: 12px 28px;
+  border-radius: 12px;
+  color: black;
+  margin-top: 20px;
 }
 
 #cardList-container {
@@ -23,8 +37,14 @@ body{
   width: 100%;
 }
 
+.interested-title .pending-title .offered-title .archive-title {
+  color: rgb(118, 178, 254);
+}
+
 #title {
   text-align: center;
+  font-size: 50px;
+  margin-bottom: 0;
 }
 
 .Interested-container {
@@ -58,6 +78,30 @@ body{
   text-align: center;
   max-width: 50%;
   margin: 0 auto;
+  border-radius: 12px;
+  padding: 30px 50px;
+}
+
+label{
+  display: inline-block;
+  float: left;
+  clear: left;
+  width: 250px;
+  text-align: right;
+  font-weight: 600;
+  margin-right: 10px;
+}
+input {
+display: inline-block;
+float: left;
+}
+
+textarea {
+  float: left;
+}
+
+select {
+  float: left;
 }
 
 #editButton {
@@ -131,21 +175,25 @@ h3 {
   max-width: fit-content;
   max-width: 100px;
   margin: 0 auto;
+  color: rgb(118, 178, 254);
 }
 #pending-title {
   max-width: fit-content;
   max-width: 100px;
   margin: 0 auto;
+  color: rgb(118, 178, 254);
 }
 #interested-title {
   max-width: fit-content;
   max-width: 100px;
   margin: 0 auto;
+  color: rgb(118, 178, 254);
 }
 #offered-title {
   max-width: fit-content;
   max-width: 100px;
   margin: 0 auto;
+  color: rgb(118, 178, 254);
 }
 
 .card-container:hover {
